# dbchat

./: Cargo.toml  README.md  ROADMAP.md  SPECS.md
.github/workflows/: release.yml
dbchat-cli/: Cargo.toml
dbchat-cli/src/: config_wizard.rs  main.rs  render.rs  repl.rs
dbchat-cli/src/ui/: menu.rs  mod.rs  theme.rs
dbchat-core/: Cargo.toml
dbchat-core/src/: config.rs  error.rs  lib.rs
dbchat-core/src/db/: connector.rs  executor.rs  mod.rs  schema.rs
dbchat-core/src/llm/: mod.rs  provider.rs
scripts/: build-release.sh  install.sh
test-db/: README.md  docker-compose.yml  init.sql
